# ChangeLog for dev-util/tla
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/tla/ChangeLog,v 1.38 2007/01/01 12:11:48 betelgeuse Exp $

  01 Jan 2007; Petteri Räty <betelgeuse@gentoo.org> metadata.xml:
  Removed arj as he is retired

*tla-1.3.5 (21 Jul 2006)

  21 Jul 2006; Anders Rune Jensen <arj@gentoo.org> +tla-1.3.5.ebuild:
  New version. 

  15 Jul 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove rphillips from metadata.xml as he's retired.

  14 May 2006; Anders Rune Jensen <arj@gentoo.org> tla-1.3.4.ebuild:
  Fix #123358: allow one to specify CFLAGS and compiler to use when
  compiling tla.
	
*tla-1.3.4 (06 Jan 2006)

  06 Jan 2006; Anders Rune Jensen <arj@gentoo.org> +tla-1.3.4.ebuild, -tla-1.3.2, -tla-1.3.1_p1:
  New version. Remove old versions

  16 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> tla-1.3.3-r1.ebuild:
  Remove GNUish cp -a call. Bug #103487.

  12 Aug 2005; Fabian Groffen <grobian@gentoo.org> tla-1.3.3-r1.ebuild:
  Marking ~ppc-macos, made dependency for sys-apps/util-linux only hold for non
  ppc-macos archs

  17 Jul 2005; MATSUU Takuto <matsuu@gentoo.org> tla-1.3.ebuild:
  Stable on sh.

*tla-1.3.3-r1 (06 Jul 2005)

  06 Jul 2005; <rphillips@gentoo.org> +tla-1.3.3-r1.ebuild:
  Added Matteo Settenvini's changes for installing documentation. #94391

*tla-1.3.3 (03 Jun 2005)

  03 Jun 2005; Anders Rune Jensen <arj@gentoo.org> +tla-1.3.3.ebuild, 
  Version bump. 

  19 May 2005; Olivier Crête <tester@gentoo.org> tla-1.3.ebuild:
  Stable on amd64

  17 May 2005; Rene Nussbaumer <killerfox@gentoo.org> tla-1.3.ebuild:
  Stable on hppa

*tla-1.3.2 (08 May 2005)

  08 May 2005; Anders Rune Jensen <arj@gentoo.org> +tla-1.3.2.ebuild, 
  tla-1.3.1_p1.ebuild:
  Version bump. Fix 1.3.1_p1 to patch correctly. Fix #77682.

  01 May 2005; Anders Rune Jensen <arj@gentoo.org> tla-1.3.1_p1.ebuild:
  GCC 4.0 patch. Fixes #91073
